# semantica

./: README.md
backend/: .gitignore  alembic_error.txt  pyproject.toml
backend/app/: main.py
backend/app/api/v1/helpers/: ontology.py  rdf.py
backend/app/api/v1/routes/: namespace.py  ontology.py  rdf.py  reasoning.py  sparql.py
backend/app/core/: db.py
backend/app/models/: __init__.py  namespace.py  ontolody.py  ontology.py  query_ontology.py  rdf.py  reasoning.py  sparql.py
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/app/components/: AppSidebar.vue  KpiCard.vue  ModeToggle.vue
frontend/app/components/dashboard/: ActivityTimeline.vue  ExportResults.vue  GraphHealthScore.vue  GraphSizeBar.vue  KpiCard.vue  LoadedFilesTable.vue  NamespaceDistDonut.vue  OntologyOverview.vue  ReasoningEngine.vue  RecentSparql.vue  SmartInsights.vue  SparqlStatsCard.vue  TopPredicatesBar.vue  TripleDistributionPie.vue
frontend/app/components/ontology/: LoadOntology.vue  OntologiesTable.vue
frontend/app/components/rdf/: GraphsTable.vue  LoadGraph.vue  ObjectsTable.vue  PredicatesTable.vue  SubjectsTable.vue
frontend/app/components/sparql/: LeftPanel.vue  PerformanceMetrics.vue  RecentQueries.vue  RightPanel.vue  (+1 more)
frontend/app/composables/: useDashboard.ts  useSparql.js
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue  settings.vue
frontend/app/store/: active_graph.ts  active_ontology.ts  reasoning.ts
frontend/app/types/: badge_variant.ts  loaded_files.ts  ontology.ts  rdf_files.ts
src-tauri/src/: lib.rs
(+13 files in other folders)
