[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.129.0",
    "owlrl>=7.1.4",
    "pydantic-settings>=2.13.1",
    "pyinstaller>=6.19.0",
    "python-multipart>=0.0.22",
    "rdflib>=7.6.0",
    "rdflib-jsonld>=0.6.2",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]
    